updated to support .net5 routing

--- a/example/BlazorTenant.Example/App.razor
+++ b/example/BlazorTenant.Example/App.razor
@@ -1,5 +1,5 @@
-<CascadingAuthenticationState>
-    <MultiTenantRouter AppAssembly="@typeof(Program).Assembly">
+﻿<CascadingAuthenticationState>
+    <MultiTenantRouter AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
         <Found Context="routeData">
             <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         </Found>
@@ -15,4 +15,3 @@
         </NoTenant>
     </MultiTenantRouter>
 </CascadingAuthenticationState>
-
